优化关于窗口, 添加ViewsContainer抽象接口

--- a/FourOFive/Views/Windows/AboutWindow.xaml
+++ b/FourOFive/Views/Windows/AboutWindow.xaml
@@ -13,6 +13,8 @@
     ResizeMode="NoResize"
     ShowInTaskbar="False"
     ShowTitle="True"
+    ActiveGlowColor="OrangeRed"
+    InactiveGlowColor="GreenYellow"
     WindowStartupLocation="CenterOwner"
     mc:Ignorable="d">
     <hc:SimplePanel>
